--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -67,6 +67,10 @@
 }
  
 @layer base {
+  ::-webkit-scrollbar {
+    display: none;
+    scrollbar-width: none;
+  } 
   * {
     @apply border-border;
   }
