fix selection width

--- a/src/components/editor/styles/index.css
+++ b/src/components/editor/styles/index.css
@@ -8,10 +8,13 @@
 @import './partials/typography.css';
 
 .ProseMirror {
-  @apply caret-black dark:caret-white outline-0 pr-8 pl-20 py-16 z-0 lg:pl-8 lg:pr-8;
+  @apply mx-auto md:my-12 lg:my-16 xl:my-20;
+  @apply outline-none;
+  @apply max-w-xl lg:max-w-2xl xl:max-w-3xl;
+  @apply caret-black dark:caret-white;
 
   & > * {
-    @apply mx-auto max-w-2xl;
+    @apply mx-auto;
   }
 
   .selection {
