add inline chat, custom highlight, font

--- a/src/components/editor/styles/index.css
+++ b/src/components/editor/styles/index.css
@@ -144,3 +144,9 @@
 [data-theme='slash-command'] {
   width: 1000vw;
 }
+
+.ProseMirror {
+  .custom-highlight {
+    background-color: yellow;
+  }
+}
