--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'WorkSans';
+  src: url('/fonts/WorkSans-VariableFont.ttf') format('truetype');
+  font-weight: 100 900;
+  font-stretch: 75% 125%;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'WorkSans';
+  src: url('/fonts/WorkSans-Italic-VariableFont.ttf') format('truetype');
+  font-weight: 100 900;
+  font-stretch: 75% 125%;
+  font-style: italic;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -75,12 +91,12 @@
     @apply border-border;
   }
   html {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground font-worksans;
     width: 100%;
     height: 100%;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground font-worksans;
     width: 100%;
     height: 100%;
   }
