--- a/src/App.css
+++ b/src/App.css
@@ -107,12 +107,12 @@
     @apply border-border;
   }
   html {
-    @apply bg-background text-foreground font-jetbrainsmono;
+    @apply bg-background text-foreground font-worksans;
     width: 100%;
     height: 100%;
   }
   body {
-    @apply bg-background text-foreground font-jetbrainsmono;
+    @apply bg-background text-foreground font-worksans;
     width: 100%;
     height: 100%;
   }
