--- a/src/components/editor/styles/partials/placeholder.css
+++ b/src/components/editor/styles/partials/placeholder.css
@@ -7,11 +7,11 @@
   &.ProseMirror-focused {
     /* Slashmenu Placeholder */
     > p.has-focus.is-empty::before {
-      content: 'Type  /  to browse options';
+      content: 'Type / for options or ⌘ + K to chat';
     }
 
     > [data-type='columns'] > [data-type='column'] > p.is-empty.has-focus::before {
-      content: 'Type  /  to browse options';
+      content: 'Type / for options or ⌘ + K to chat';
     }
   }
 
