add image support

--- a/src/components/editor/styles/index.css
+++ b/src/components/editor/styles/index.css
@@ -97,6 +97,7 @@
   }
 
   .node-imageBlock {
+    margin: 0;
     & img {
       @apply border-2 border-transparent rounded-xl overflow-hidden;
     }
