cleanup image styles

--- a/src/components/editor/styles/partials/placeholder.css
+++ b/src/components/editor/styles/partials/placeholder.css
@@ -32,5 +32,6 @@
   [data-placeholder][data-suggestion]::before,
   [data-placeholder][data-suggestion] *::before {
     content: none !important;
+    user-select: none;
   }
 }
