--- a/src/components/editor/styles/index.css
+++ b/src/components/editor/styles/index.css
@@ -58,11 +58,12 @@
   }
 
   .node-imageUpload {
-    @apply rounded border-2 border-dotted border-black border-opacity-10 p-2 dark:border-neutral-500;
+    @apply rounded border-2 border-dotted p-2 dark:border-neutral-500;
+    user-select: none;
     transition: border 160ms cubic-bezier(0.45, 0.05, 0.55, 0.95);
 
     &:hover {
-      @apply border-opacity-30;
+      @apply border-opacity-50;
     }
 
     &:has(.is-active),
