--- a/src/components/editor/styles/partials/placeholder.css
+++ b/src/components/editor/styles/partials/placeholder.css
@@ -17,7 +17,7 @@
 
   /* Default Placeholder */
   & > .is-editor-empty::before {
-    content: 'Click here to start writing …';
+    content: 'Start writing...';
   }
 
   /* Blockquote Placeholder */
