--- a/src/components/editor/styles/index.css
+++ b/src/components/editor/styles/index.css
@@ -149,15 +149,15 @@
 
 .ProseMirror {
   .custom-highlight {
-    background-color: rgba(255, 255, 0, 0.2);
+    background-color: rgba(255, 255, 0, 0.1);
     border-radius: 4px;
-    padding: 2px 4px;
+    padding: 4px;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s ease;
   }
 
   .custom-highlight:hover {
-    background-color: rgba(255, 255, 0, 0.3);
+    background-color: rgba(255, 255, 0, 0.2);
   }
 }
 
